Added config.json (#1)

--- a/TibiaRuneMaker.UI/TibiaRuneMaker.UI.csproj
+++ b/TibiaRuneMaker.UI/TibiaRuneMaker.UI.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\TibiaRuneMaker.Logic\TibiaRuneMaker.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
